Bug 571507 - Add checks for texture creation failure to ContainerLayerD3D* - r=bas.schouten